CHANNELMGR-1684 Fix broken scrollbar in content-editor using FF

--- a/channel-manager/frontend-ng/src/app/channel/sidePanels/rightSidePanel/contentEditor/contentEditor.scss
+++ b/channel-manager/frontend-ng/src/app/channel/sidePanels/rightSidePanel/contentEditor/contentEditor.scss
@@ -16,6 +16,11 @@
 @import 'variables';
 
 content-editor {
+  // Workaround for Firefox; render scrollbar in content-editor instead of ui-view element
+  &.display-contents {
+    display: contents;
+  }
+
   .feedback > :last-child {
     margin-bottom: 0;
   }
